<resources>
    <string name="app_name">Jabbler</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="alavio_eu">\u0040alavio.eu</string>
    <string name="password_empty">Password is empty</string>
    <string name="logout">Logout</string>
    <string name="areYouSureLogout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="full_name">Full name</string>
    <string name="password_mismatch">Password mismatch!</string>
    <string name="invalid_username">Invalid username, forbidden characters typed.</string>
    <string name="ok">OK</string>
    <string name="user_registered">User registered.</string>
    <string name="check_internet_connection">Cannot contact the server, check your internet connection.</string>
    <string name="user_reg_failed">User registration failed</string>
    <string name="login_failed">Login failed</string>
    <string name="unknown_host">Unknown host name.</string>
    <string name="unknown_app_error">Unknown application error occurred.</string>
    <string name="username_exists">Username already exists.</string>
    <string name="name">Nickname</string>
    <string name="error_contact_delete">Error while deleting the contact</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_delete_contact">Are you sure you want to delete this contact ?</string>

    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Volleyball</item>
        <item>Basket Ball</item>
        <item>Chess</item>
    </string-array>

    <string-array name="sample_contacts">
        <item>John Doe</item>
        <item>Jane Doe</item>
        <item>Vlad Vladimir</item>
        <item>Freddy Kruger</item>
    </string-array>

    <string-array name="sample_contacts_more">
        <item>Frank	Alsop</item>
        <item>Gabrielle	Pullman</item>
        <item>Irene	Paterson</item>
        <item>Joanne	Langdon</item>
        <item>Gordon	Campbell</item>
        <item>Tracey	Burgess</item>
        <item>Samantha	Forsyth</item>
        <item>Joanne	Payne</item>
        <item>Brandon	Marshall</item>
        <item>Neil	Sharp</item>
        <item>Peter	Forsyth</item>
        <item>Oliver	Springer</item>
        <item>Anthony	Morgan</item>
        <item>Irene	MacDonald</item>
        <item>Faith	Johnston</item>
        <item>Ruth	Hughes</item>
        <item>Tracey	Fisher</item>
        <item>Una	Parr</item>
        <item>Megan	Reid</item>
        <item>Katherine	Wilson</item>
    </string-array>

    <string name="detail">Detail</string>
    <string name="favourite">Favourite</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="type_a_message">Type a message...</string>
    <string name="chat_feed">Chat feed</string>
    <string name="contact_already_added">Contact already added.</string>
    <string name="no_messages_here_n_why_don_t_you_talk_to_anyone">No messages here ?   Why don\'t you talk to anyone ?</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="favourite_contacts">Favourite contacts</string>
    <string name="about_text">Jabber client implementing basic functions of the protocol. App is able to communicate with special Jabber server hosted on Alavio.eu that adds additional features such as video-calls.</string>
    <string name="app_state">App is currently in an ALPHA state.</string>
</resources>
